# App-SerialPort

./: .appveyor.yml  .gitignore  App-SerialPort.pro  CMakeLists.txt  LICENSE  NetAndSerialPort.cfg  README.md  SerialPortLSL.cfg  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  reader.cpp  reader.hpp
.github/workflows/: cppcmake.yml
cmake/: Findliblsl.cmake
